Tried to get BreakoutRoomViewer working, but currently it's broken.
